Compiler/tests/good/var3.nx
val x : int = 3;

x := 42;

printn(x);
