Compiler/tests/bad/simbol2.nx
val 1teste : int = 3;

